--- a/lib/generators/angularjs/scaffold/templates/edit.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/edit.html.erb
@@ -1,3 +1,5 @@
+<section data-ng-include=" '<%%= asset_path('headers/<%= @plural_folder_name%>.html') %>' " ></section>
+
 <form name="edit<%= @model_name%>">
   <fieldset>
     <legend>
@@ -44,4 +46,3 @@
     </div>
   </fieldset>
 </form>
-
