--- a/lib/generators/angularjs/scaffold/templates/index.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/index.html.erb
@@ -1,42 +1,96 @@
-<h1><%= @controller %></h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <%- columns.each do |column| -%>
-        <th><%= column.name.humanize %></th>
-      <%- end -%>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <%- @columns = columns -%>
-  <%- tag_column = @columns.shift -%>
-  <tbody>
-    <tr ng-repeat="<%= @resource_name%> in <%= @plural_model_name%>">
-      <td>
-        <a href="/<%= @plural_model_name%>/{{<%= @resource_name%>.id}}">
-          {{<%= "#{@resource_name}.#{tag_column.name}"%>}}
-        </a>
-      </td>
-      <%- @columns.each do |column| -%>
-        <td>
-          {{<%= @resource_name%>.<%= column.name %>}}
-        </td>
-      <%- end -%>
-      <td>
-        <a href="/<%= @plural_model_name%>/{{<%= @resource_name%>.id}}/edit"
-          class="btn btn-primary"><i class="icon-edit"></i>
-          Edit
-        </a>
-        <button ng-click="destroy()" class="btn btn-danger">
-          <i class="icon-trash"></i> Delete
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<section data-ng-include=" '<%%= asset_path('headers/<%= @plural_folder_name%>.html') %>' " ></section>
 
-<p>
-  <a href='/<%= @plural_model_name%>/new' class="btn btn-primary">
-    <i class="icon-plus"></i>New
-  </a>
-</p>
+<div class="page page-table">
+    <section class="panel panel-default table-dynamic">
+        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <%= @controller %></strong></div>
+
+        <div class="table-filters">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6">
+                    <form>
+                        <input type="text"
+                               placeholder="Search..."
+                               class="form-control"
+                               data-ng-model="searchKeywords"
+                               data-ng-keyup="search()">
+                    </form>
+                </div>
+                <div class="col-sm-3 col-xs-6 filter-result-info">
+                    <span>
+                        Showing {{filtered<%= @controller %>.length}}/{{<%= @plural_model_name %>.length}} entries
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <table class="table table-bordered table-striped table-responsive">
+          <thead>
+            <tr>
+            <%- columns.each do |column| -%>
+                <th><div class="th"><%= column.name.humanize %>
+                    <span class="fa fa-angle-up"
+                          data-ng-click=" order('<%= column.name %>') "
+                          data-ng-class="{active: row == '<%= column.name %>'}"></span>
+                    <span class="fa fa-angle-down"
+                          data-ng-click=" order('-<%= column.name %>') "
+                          data-ng-class="{active: row == '-<%= column.name %>'}"></span>
+                </div></th>
+            <%- end -%>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="<%= @resource_name %> in currentPage<%= @controller %>">
+            <%- columns.each do |column| -%>
+                <td>
+                  <a href="/<%= @plural_model_name %>/{{<%= @resource_name %>.id}}">
+                    {{<%= @resource_name %>.<%= column.name %>}}
+                  </a>
+                </td>
+            <%- end -%>
+              <td>
+                <a href="/<%= @plural_model_name %>/{{<%= @resource_name %>.id}}/edit"
+                  class="btn btn-primary btn-xs"><i class="icon-edit"></i>
+                  Edit
+                </a>
+                <button ng-click="destroy()" class="btn btn-danger btn-xs">
+                  <i class="icon-trash"></i> Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <footer class="table-footer">
+            <div class="row">
+                <div class="col-md-6 page-num-info">
+                    <span>
+                        Show
+                        <select data-ng-model="numPerPage"
+                                data-ng-options="num for num in numPerPageOpt"
+                                data-ng-change="onNumPerPageChange()">
+                        </select>
+                        entries per page
+                    </span>
+                </div>
+                <div class="col-md-6 text-right pagination-container">
+                    <uib-pagination class="pagination-sm"
+                                ng-model="currentPage"
+                                total-items="filtered<%= @controller %>.length"
+                                max-size="4"
+                                ng-change="select(currentPage)"
+                                items-per-page="numPerPage"
+                                rotate="false"
+                                previous-text="&lsaquo;" next-text="&rsaquo;"
+                                boundary-links="true"></uib-pagination>
+                </div>
+            </div>
+        </footer>
+    </section>
+
+    <p>
+      <a href='/<%= @plural_model_name %>/new' class="btn btn-primary">
+        <i class="icon-plus"></i>New
+      </a>
+    </p>
+</div>
