--- a/lib/generators/angularjs/scaffold/templates/new.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/new.html.erb
@@ -1,45 +1,56 @@
-<form name="new<%= @model_name%>">
-  <fieldset>
-    <legend>
-      New <%= @model_name.titleize %>
-    </legend>
-    <%- columns.each do |column| -%>
-      <div class="control-group">
-        <label class="control-label">
-          <%= column.name.titleize %>
-        </label>
-        <div class="controls">
-          <%- if ['description', 'body'].include? column.name -%>
-            <textarea name="<%= @resource_name%>[<%= column.name %>]"
-                   ng-model="<%= @resource_name%>.<%= column.name %>"
-                   class="<%= column.field_type %>"
-                   required></textarea>
-          <%- else -%>
-            <input type="<%= column.field_type.to_s.split('_').first %>"
-                   name="<%= @resource_name%>[<%= column.name %>]"
-                   ng-model="<%= @resource_name%>.<%= column.name %>"
-                   class="<%= column.field_type %>"
-                   required>
-          <%- end -%>
-          <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
-                class="help-inline">
-            Required
-          </span>
-        </div>
-      </div>
-    <%- end -%>
-    <div class="form-actions">
-      <button class="btn btn-success" ng-click="save()"
-        ng-disabled="isClean() || new<%= @model_name%>.$invalid">
-        <i class="icon-save"></i> Save
-      </button>
-      <button ng-click="destroy()"
-              ng-show="<%= @resource_name%>.id"
-              class="btn btn-danger">
-              <i class="icon-trash"></i> Delete
-      </button>
-      <a href="/<%= @plural_model_name%>" class="btn">Back to <%= @plural_model_name%></a>
-    </div>
-  </fieldset>
-</form>
+<section data-ng-include=" '<%%= asset_path('headers/<%= @plural_folder_name%>.html') %>' " ></section>
 
+<div class="page">
+
+    <section class="panel panel-default">
+        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span>Nueva <%= @model_name%></strong></div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                  <form name="new<%= @model_name%>">
+                    <fieldset>
+                      <%- columns.each do |column| -%>
+                        <div class="control-group">
+                          <label class="control-label">
+                            <%= column.name.humanize %>
+                          </label>
+                          <div class="controls">
+                            <%- if ['description', 'body'].include? column.name -%>
+                              <textarea name="<%= @resource_name%>[<%= column.name %>]"
+                                     ng-model="<%= @resource_name%>.<%= column.name %>"
+                                     class="<%= column.field_type %>"
+                                     required></textarea>
+                            <%- else -%>
+                              <input type="<%= column.field_type.to_s.split('_').first %>"
+                                     name="<%= @resource_name%>[<%= column.name %>]"
+                                     ng-model="<%= @resource_name%>.<%= column.name %>"
+                                     class="<%= column.field_type %>"
+                                     required>
+                            <%- end -%>
+                            <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
+                                  class="help-inline">
+                              Required
+                            </span>
+                          </div>
+                        </div>
+                      <%- end -%>
+                      <div class="divider divider-dashed"></div>
+                      <div class="form-actions">
+                        <button class="btn btn-success" ng-click="save()"
+                          ng-disabled="isClean() || new<%= @model_name%>.$invalid">
+                          <i class="icon-save"></i> Save
+                        </button>
+                        <button ng-click="destroy()"
+                                ng-show="<%= @resource_name%>.id"
+                                class="btn btn-danger">
+                                <i class="icon-trash"></i> Delete
+                        </button>
+                        <a href="/<%= @plural_model_name%>" class="btn">Back to <%= @plural_model_name%></a>
+                      </div>
+                    </fieldset>
+                  </form>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
