--- a/lib/generators/angularjs/scaffold/templates/new.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/new.html.erb
@@ -3,7 +3,7 @@
 <div class="page">
 
     <section class="panel panel-default">
-        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span>Nueva <%= @model_name%></strong></div>
+        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span>Nueva <%= @model_name.titleize%></strong></div>
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
