--- a/lib/generators/angularjs/scaffold/templates/edit.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/edit.html.erb
@@ -12,7 +12,7 @@
                         <%- columns.each do |column| -%>
                           <div class="control-group">
                             <label class="control-label">
-                              <%= column.name.humanize %>
+                              <%= column.name.underscore.humanize %>
                             </label>
                             <div class="controls">
                               <%- if ['description', 'body'].include? column.name -%>
@@ -45,7 +45,7 @@
                                     <i class="icon-trash"></i>Delete
                             </button>
                             <a href="/<%= @plural_model_name%>" class="btn">
-                              Back to <%= @plural_model_name%>
+                              Back to <%= @plural_model_name.underscore.humanize%>
                             </a>
                         </div>
                       </fieldset>
