--- a/lib/generators/angularjs/scaffold/templates/edit.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/edit.html.erb
@@ -7,33 +7,34 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <form name="show<%= @model_name%>">
+                    <form name="show<%= @model_name%>" role="form" class="ng-pristine ng-valid AVAST_PAM_loginform">
                       <fieldset>
                         <%- columns.each do |column| -%>
-                          <div class="control-group">
-                            <label class="control-label">
-                              <%= column.name.underscore.humanize %>
-                            </label>
-                            <div class="controls">
-                              <%- if ['description', 'body'].include? column.name -%>
-                                <textarea name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required></textarea>
-                              <%- elsif ['email'].include? column.field_type.to_s.split('_').first -%>
-                                  <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                              <%- elsif ['check'].include? column.field_type.to_s.split('_').first -%>
-                                  <label class="ui-switch ui-switch-success"><input type="checkbox" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" required><i></i></label>
-                              <%- elsif ['text'].include? column.field_type.to_s.split('_').first -%>
-                                  <input type="text" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                              <%- else -%>
-                                <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                              <%- end -%>
-                              <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
-                                    class="help-inline">
-                                Required
-                              </span>
-                            </div>
+                          <div class="form-group">
+                            <label for="<%= column.name %>"><%= column.name.underscore.humanize %></label>
+                          <%- if ['description', 'body'].include? column.name -%>
+                            <textarea name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required></textarea>
+                          <%- elsif ['email'].include? column.field_type.to_s.split('_').first -%>
+                            <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required>
+                          <%- elsif ['check'].include? column.field_type.to_s.split('_').first -%>
+                            <label class="ui-switch ui-switch-success"><input type="checkbox" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required><i></i></label>
+                          <%- elsif @filters_column_names.include?(column.name) -%>
+                            <filtro-<%= column.name.to_s.gsub('_id', '') -%>  class="form-control" required/>
+                          <%- elsif column.foreign_key? -%>
+                            <select ng-model="<%= @resource_name%>.<%= column.name %>" ng-options="item as item.Nombre for item in <%= column.name.to_s.gsub('_id', '') %>" class="form-control" required>
+                              <option value="">Seleccione un <%= column.name.underscore.humanize %></option>
+                            </select>
+                          <%- elsif ['text'].include? column.field_type.to_s.split('_').first -%>
+                            <input type="text" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="form-control" required>
+                          <%- else -%>
+                            <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="form-control" required>
+                          <%- end -%>
+                            <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
+                                  class="help-inline">
+                              Required
+                            </span>
                           </div>
                         <%- end -%>
-                        <div class="divider divider-dashed"></div>
                         <div class="form-actions">
                             <button class="btn btn-success" ng-click="save()"
                               ng-disabled="isClean() || edit<%= @model_name%>.$invalid">
