--- a/lib/generators/angularjs/scaffold/templates/edit.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/edit.html.erb
@@ -12,7 +12,7 @@
                         <%- columns.each do |column| -%>
                           <div class="form-group">
                             <label for="<%= column.name %>"><%= column.name.underscore.humanize %></label>
-                          <%- if ['description', 'body'].include? column.name -%>
+                          <%- if ['description', 'body','descripcion'].include? column.name.downcase -%>
                             <textarea name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required></textarea>
                           <%- elsif ['email'].include? column.field_type.to_s.split('_').first -%>
                             <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required>
