--- a/lib/generators/angularjs/scaffold/templates/new.html.erb
+++ b/lib/generators/angularjs/scaffold/templates/new.html.erb
@@ -10,30 +10,33 @@
                   <form name="new<%= @model_name%>">
                     <fieldset>
                       <%- columns.each do |column| -%>
-                        <div class="control-group">
-                          <label class="control-label">
-                            <%= column.name.underscore.humanize %>
-                          </label>
-                          <div class="controls">
-                            <%- if ['description', 'body'].include? column.name -%>
-                              <textarea name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required></textarea>
-                            <%- elsif ['email'].include? column.field_type.to_s.split('_').first -%>
-                                <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                            <%- elsif ['check'].include? column.field_type.to_s.split('_').first -%>
-                                <label class="ui-switch ui-switch-success"><input type="checkbox" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" required><i></i></label>
-                            <%- elsif ['text'].include? column.field_type.to_s.split('_').first -%>
-                                <input type="text" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                            <%- else -%>
-                              <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="<%= column.field_type %>" required>
-                            <%- end -%>
-                            <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
-                                  class="help-inline">
-                              Required
-                            </span>
-                          </div>
+                        <div class="form-group">
+                          <label for="<%= column.name %>"><%= column.name.underscore.humanize %></label>
+                        <%- if ['description', 'body','descripcion'].include? column.name.downcase -%>
+                          <div text-angular name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="ui-editor" required></div>
+                        <%- elsif ['icono','imagen'].include? column.name.downcase -%>
+                          <div control-imagen name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="imagen" required></div>
+                        <%- elsif ['email'].include? column.field_type.to_s.split('_').first -%>
+                          <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required>
+                        <%- elsif ['check'].include? column.field_type.to_s.split('_').first -%>
+                          <label class="ui-switch ui-switch-success"><input type="checkbox" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>"  class="form-control" required><i></i></label>
+                        <%- elsif @filters_column_names.include?(column.name) -%>
+                          <filtro-<%= column.name.to_s.gsub('_id', '') -%>  class="form-control" required/>
+                        <%- elsif column.foreign_key? -%>
+                          <select ng-model="<%= @resource_name%>.<%= column.name %>" ng-options="item.id as item.Nombre for item in <%= get_list_name(column.name) %>" class="form-control" required>
+                            <option value="">Seleccione un <%= column.name.underscore.humanize %></option>
+                          </select>
+                        <%- elsif ['text'].include? column.field_type.to_s.split('_').first -%>
+                          <input type="text" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="form-control" required>
+                        <%- else -%>
+                          <input type="<%= column.field_type.to_s.split('_').first %>" name="<%= @resource_name%>[<%= column.name %>]" ng-model="<%= @resource_name%>.<%= column.name %>" class="form-control" required>
+                        <%- end -%>
+                          <span ng-show="new<%= @model_name%>.<%= column.name %>.$error.required"
+                                class="help-inline">
+                            Required
+                          </span>
                         </div>
                       <%- end -%>
-                      <div class="divider divider-dashed"></div>
                       <div class="form-actions">
                         <button class="btn btn-success" ng-click="save()"
                           ng-disabled="isClean() || new<%= @model_name%>.$invalid">
